restart this project for tufte

--- a/config/_default/layouts/index.html
+++ b/config/_default/layouts/index.html
@@ -6,8 +6,8 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/b1/b11/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}" role="button">See Latest</a>
-      <p class="meta">Land Registry October Update</a></p>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/b1/b11/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}" role="button">cta</a>
+      <p class="meta">msg</a></p>
     </div>
   </div>
 </section>
@@ -18,30 +18,30 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-5">
-        <h2 class="h4">Indices</h2>
-        <p>Accurate, local, high frequency, timely: in the real world, choose three from these four</p>
+        <h2 class="h4">AAA</h2>
+        <p>aaa</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">Factors</h2>
-        <p>Just three factors drive 95% of relative returns for 90% of owners</p>
+        <h2 class="h4">BBB</h2>
+        <p>bbb</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">Forecasts</h2>
-        <p>Po💲h or not: the right answer for a leg-up depends on timing the local & national cycle</p>
+        <h2 class="h4">CCC</h2>
+        <p>ccc</p>
       </div>
     </div>
     <div class="row justify-content-center text-center">
       <div class="col-lg-5">
-        <h2 class="h4">New Build</h2>
-        <p>Help to Buy - check the premium on each new✨build flat before buying, as it will fade </p>
+        <h2 class="h4">DDD</h2>
+        <p>ddd </p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">Infrastructure</h2>
-        <p>Residual returns unexplained by factor attribution reveal transport🚉 project premia</p>
+        <h2 class="h4">EEE</h2>
+        <p>eee</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">Open Source</h2>
-        <p>Built with❤️on R code and open data - every last piece is free at source</p>
+        <h2 class="h4">FFF</h2>
+        <p>fff</p>
       </div>
     </div>
   </div>
